reorganized application section

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -262,13 +262,13 @@ Although the temporal trends in figure \@ref(fig:5-5-sims) are complex and the e
 knitr::include_graphics('../figures/simulation-regression-plots.png')
 ```
 
-# Applying the framework: The effects of $\e(R)$ and $\var(R)$ on a lowland tapir
+# Applying the framework
 
-\noindent In this section, we use empirical tracking data on a lowland tapir from the Brazilian Cerrado to show how this framework can be applied to better understand the movement ecology of free-ranging animals via remote sensing data such as NDVI [@pettorelli_normalized_2011]. Appendix 2 contains additional information on how NDVI was modeled along with details on the continuous-time movement models [@fleming_ctmm_2021; @noonan_scale-insensitive_2019] and autocorrelated kernel density estimation [@noonan_comprehensive_2019; @alston_mitigating_2022; @silva_autocorrelationinformed_2022] used to quantify the tapir's spatial needs.
+\noindent In this section, we show how this framework can be applied to better understand the movement ecology of free-ranging animals via remote sensing data such as NDVI [@pettorelli_normalized_2011]. To illustrate the methods, we use empirical tracking data on a lowland tapir from the Brazilian Cerrado. Appendix 2 contains additional information on how NDVI was modeled along with details on the continuous-time movement models [@fleming_ctmm_2021; @noonan_scale-insensitive_2019] and autocorrelated kernel density estimation [@noonan_comprehensive_2019; @alston_mitigating_2022; @silva_autocorrelationinformed_2022] used to quantify the tapir's spatial needs.
 
 The hypotheses we present here allow researchers to combine otherwise complicated findings (e.g., figure \@ref(fig:5-5-sims)) and generalize results to a single, common set of functions. We expect the two hypotheses we present here (figures \@ref(fig:mu-hyp) and \@ref(fig:s2-hyp)) to be applicable to all motile organisms, once differences in size, metabolic needs, and diet are accounted for. In this subsection, we illustrate how researchers can leverage these hypotheses using their own data to build on previous work rather than listing the results as new findings. Additionally, the analyses can be expanded to the population or species level with the use of Hierarchical Generalized Additive Models (HGAMs) with individual-level intercepts and smooth terms [see models "GS" and "GI" in @pedersen_hierarchical_2019]. Such models would allow one to test whether members of the same population or species respond similarly to $\e(R)$ and $\var(R)$ while also quantifying any deviation from the hypothesized behavior. Individuals and populations that were once thought to have different spatial needs due to differences in behavior may instead be simply responding to different local conditions along the functions in figures \@ref(fig:mu-hyp) and \@ref(fig:s2-hyp) [e.g., @singh_migration_2012]. In the following sections, we illustrate how one can apply this framework to empirical data.
 
-We start by providing examples and considerations on how one may model $R$, animals' spatial needs, and the effects of $\e(R)$ and $\var(R)$ on animals' spatial needs. Next, we apply the methods to the tapir's GPS tracking data and use NDVI as a proxy for $R$. Finally, we offer suggestions on how this approach can be used to inform conservation-related decisions, including assessing habitat quality and estimating animals' spatial needs under different scenarios.
+We start by providing examples and considerations on how one may model $R$ and the effects of $\e(R)$ and $\var(R)$ on animals' spatial needs. Next, we apply the methods to the tapir's GPS tracking data and use NDVI as a proxy for $R$. Finally, we offer suggestions on how this approach can be used to inform conservation-related decisions, including assessing habitat quality and estimating animals' spatial needs under different scenarios.
 
 ### Modeling $R$
 
@@ -280,7 +280,7 @@ The Gamma location-scale family is best for strictly positive responses, such as
 
 Modeling the mean and variance terms of $R$ should be done carefully. Since trends in both $\e(R)$ and $\var(R)$ can be spatiotemporally nonlinear and non-monotonic, we suggest using a GAM rather than a GLM. However, the complexity of the spatiotemporal terms should be chosen carefully, particularly for the mean's terms. An excessively wiggly $\hat \mu(t)$ will cause $\sigma^2(t)$ to be under-estimated, while an excessively smooth $\hat \mu(t)$ will cause $\sigma^2(t)$ to be over-estimated. Although there is no error-proof system, choosing the complexity of the terms based on the animal's ability to detect change and adapt is a reasonable starting point. Additionally, setting the basis dimension (`k`) of the scale terms to be half or less than that of the mean terms and using restricted marginal likelihood [@wood_fast_2011] should provide reasonably accurate results. We suggest starting with low values of `k` and adjusting `k` based on the trends in the residuals. Note that since $R$ is likely spatiotemporally autocorrelated, it may be easy to overfit the model. @simpson_modelling_2018 provides a useful introduction to GAMs for biological time series.
 
-### Estimating resource abundance using NDVI
+### Estimating $R$ using NDVI
 
 \noindent Since there is no commonly-used distribution with a support over the interval $[-1, 1]$, we use beta distribution after scaling NDVI to the interval $[0, 1]$ by applying the **linear transformation**
 
@@ -363,16 +363,16 @@ Predicting animal movement using stochastic models may seem less straightforward
 
 <!-- Modeling animal movement as a continuous-time stochastic process is particularly useful in this approach, since it accounts for the uncertainty and limited amount of information contained in short periods of (autocorrelated) tracking data by differentiating between the sample size (i.e., the number of locations) and effective sample size [i.e., the number of range crossings, see @noonan_scale-insensitive_2019; @noonan_comprehensive_2019]. In this paper, we model tracking data using continuous-time movement models via the `ctmm` package [@fleming_ctmm_2021] for `R` [@r_core_team_r_2022]. -->
 
-### Modeling the effects of $\e(R)$ and $\var(R)$
+### Modeling the effects of $\e(R)$ and $\var(R)$ on animals' spatial needs
 
 \noindent As discussed in the previous section, the first step to modeling $H$ is to choose an appropriate family of distributions. Since $H$ is strictly positive and continuous, a Gamma family seems the most appropriate among the distributions currently offered by the `mgcv` package [@wood_generalized_2017], but the Tweedie family would also be appropriate if the variance does not scale with the squared mean.
 
 As with the simulated effects of $\mu(t)$ and $\sigma^2(t)$ on $H$ (figure \@ref(fig:5-5-reg)), a location-scale Gamma model is likely required. If there is not sufficient data to fit a location-scale model (which is not the case here), a simple Gamma model may be sufficient, but we suggest selecting the best family of distributions using an information criterion such as the Akaike Information Criterion [@akaike_new_1974]. Due to potential correlation between $\e(R)$ and $\var(R)$ in a small and autocorrelated sample, the relationship between $R$ and $H$ should be modeled carefully and with parsimony. To appropriately constrain the shape of the effects of $\e(R)$ and $\var(R)$, we suggest using a GLM or a shape-constrained GAM (as long as the wiggliness of each term is chosen carefully). Here, we model the effects of $\e(R)$ and $\var(R)$ on $H$ using a shape-constrained GAM with via the `scam` package [@pya_scam_2022]. Additional information on the model can be found in Appendix 2.
 
-### Empirical results
+### The effects of $\e(R)$ and $\var(R)$ on a lowland tapir's spatial needs
 
 ```{r tapir-mw, fig.cap="Seven-day home-range size of a lowland tapir (\\emph{Tapirus terrestris}) in response to changes in mean and variance in resource abundance. (a.) Mean resource abundance, $\\mu(t)$, esimated as the mean NDVI at the locations visited by the tapir. (b.) Varince in resource abundance, $\\sigma^2(t)$, esimated as the average variance in NDVI at the locations visited by the tapir. (c.) Estimated seven-day home range based on the 95\\% utilization quantiles. (d., e.) estimated marginal effects of $\\mu(t)$ and $\\sigma^2(t)$ on home-range size. The model accounted for the marginal effects of $\\mu(t)$ and $\\sigma^2(t)$ and their interaction on mean spatial needs and the variance around them. (f.) The effect of $\\mu(t)$ does not follow the data closely because $\\e(R)$ and $\\var(R)$ are highly correlated. Consequently, while estimating the effects of $\\e(R)$ and $\\var(R)$ via separate models would allow result in a closer fit, the estimated effects would be inappropriate because they do not disentangle the effects of $\\e(R)$ and $\\var(R)$. See Appendix 2 for additional information. The tapir movement data corresponds to the individual named ``Anna\" from the Cerrado sample of Medici $et~al.$ (2022).", out.width='100%'}
-knitr::include_graphics('../figures/tapir-example.png')
+knitr::include_graphics('../figures/tapir-example-with-data.png')
 ```
 
 \noindent Figure \@ref(fig:tapir-mw) illustrates  the tapir's response to changes in $\e(R)$ and $\var(R)$. Panels **a** and **b** show the changes in mean and variance in NDVI, respectively, during the tracking period. Panel **c** shows the changes in the tapir's space use over time. Note how the home-range size is larger during periods of lower NDVI (e.g., August 2017) and smallest during periods with high NDVI (January 2018). In contrast, when resources are scarce and highly unpredictable (August 2018), the tapir uses up to 5 times more space than when resources are abundant and predictable (January 2018). Finally, panels **d** and **e** show the estimated (partial) effects of $\mu(t)$ and $\sigma^2(t)$ on the tapir's space use. Again, the estimated effects of $\e(R)$ and $\var(R)$ follow the simple relationships we hypothesized (figures \@ref(fig:mu-hyp) and \@ref(fig:s2-hyp)) and supported with the simulated responses (figure \@ref(fig:5-5-reg)). Thus, while the time series shown in panel **c** may appear complicated, the tapir's response can be well described by two simple functions.
