changed some refs to lower case

--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -195,7 +195,7 @@
 }
 
 @article{brown_toward_2004,
-	title = {{TOWARD} {A} {METABOLIC} {THEORY} {OF} {ECOLOGY}},
+	title = {Toward a metabolic theory of ecology},
 	volume = {85},
 	issn = {0012-9658},
 	url = {http://doi.wiley.com/10.1890/03-9000},
@@ -2074,7 +2074,7 @@
 }
 
 @article{fieberg_kernel_2007,
-	title = {{KERNEL} {DENSITY} {ESTIMATORS} {OF} {HOME} {RANGE}: {SMOOTHING} {AND} {THE} {AUTOCORRELATION} {RED} {HERRING}},
+	title = {Kernel density estimators of home range: smoothing and the autocorrelation red herring},
 	volume = {88},
 	issn = {0012-9658},
 	shorttitle = {{KERNEL} {DENSITY} {ESTIMATORS} {OF} {HOME} {RANGE}},
@@ -3873,7 +3873,7 @@
 }
 
 @article{mcclintic_effects_2014,
-	title = {Effects of spatiotemporal resource heterogeneity on home range size of {\textless}span style="font-variant:small-caps;"{\textgreater}{A}{\textless}/span{\textgreater}merican beaver},
+	title = {Effects of spatiotemporal resource heterogeneity on home range size of {American} beaver},
 	volume = {293},
 	issn = {0952-8369, 1469-7998},
 	shorttitle = {Effects of spatiotemporal resource heterogeneity on home range size of {\textless}span style="font-variant},
@@ -5013,4 +5013,12 @@ Version Number: 1},
 	doi = {10.1007/978-0-387-87458-6_11},
 	note = {Series Title: Statistics for Biology and Health},
 	pages = {261--293},
+}
+
+@book{hijmans_terra_2023,
+	title = {terra: {Spatial} {Data} {Analysis}},
+	url = {https://CRAN.R-project.org/package=terra},
+	author = {Hijmans, Robert J.},
+	year = {2023},
+	annote = {R package version 1.7-39},
 }
