--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -258,7 +258,7 @@ Not all 25 scenarios depicted in figure \@ref(fig:5-5-sims) may be realistic, bu
 
 Although the temporal trends in figure \@ref(fig:5-5-sims) are complex and the effects of $\e(R)$ and $\var(R)$ can be hard to disentangle, two surprisingly simple relationships emerge when home-range size is shown as a function of either $\e(R)$ or $\var(R)$, rather than time. Both $\e(R)$ and $\var(R)$ affect spatial needs precisely as we hypothesized (figure \@ref(fig:5-5-reg)).<!--, although we found that the effect of $\var(R)$ is closer linear than we expected (it is mostly sub-linear as long as $H$ is sufficiently far from zero). We ensured this was not due to a low maximum $\var(R)$ (as in the left-hand side of figure \@ref(fig:s2-hyp)) by simulating within the range $\sigma^2(t) \in [2\,500, 250\,000] \implies \sigma \in [50, 500]$, since the range of $\e(R)$ was $\mu(t) \in [100, 200]$.--> We believe the approximately linear effect of $\var(R)$ on $H$ is mainly due to two factors. Firstly, $H$ scales superlinearly with the standard deviation in $R$ (as $\sqrt{\var(R)}$ is on the same scale as $\e(R)$; not shown), which would necessarily imply that $H$ increases *sub*linearly with $\var(R)$. Secondly, the animal's movement was simulated to be range resident within an homogeneous environment. Since real-world landscapes are spatially heterogeneous in both $\e(R)$ and $\var(R)$, animals may choose to shift their home range to a new area following a stochastic event that caused $\mu(t)$ to decrease, such as a fire or a flood. Thus, we hypothesize that our simulations may be underestimating animals' responses to spatiotemporal changes in $\e(R)$ and $\var(R)$, since the simulated animals cannot select for areas of higher $\e(R)$ or lower $\var(R)$. Additionally, the simulations also ignore how competition, movement costs, predation, and other factors may affect the effects of $\e(R)$ and $\var(R)$ on $H$. While these are definitely important effects that should be accounted for [@jetz_scaling_2004], doing so was beyond the scope of this paper.
 
-```{r 5-5-reg, eval=TRUE, echo=FALSE, fig.cap="Effects of $\\e(R)$ and $\\var(R)$ on simulated spatial requirements. The relationships were estimated using a Generalized Additive Model for Location and Scale (Rigby and Stasinopoulos 2005; Stasinopoulos and Rigby 2007) with a Gamma family of distributions. The model accounted for the effects of $\\e(R)$ and $\\var(R)$ and the interaction effects between the two on both $\\e(H)$ and $\\var(H)$. Note the nonlinear decrease in $H$ as $\\e(R)$ increases and the increase in $H$ as $\\var(R)$ increases. Additionally, note how the variance in spatial needs increases with mean spatial needs.", out.width='100%'}
+```{r 5-5-reg, eval=TRUE, echo=FALSE, fig.cap="Effects of $\\e(R)$ and $\\var(R)$ on simulated spatial requirements. The relationships were estimated using a Generalized Additive Model for Location and Scale (GAMLS; Rigby and Stasinopoulos 2005; Stasinopoulos and Rigby 2007) with a Gamma location-scale family of distributions ($\\tt{mgcv\\!::\\!gammals})$. The model accounted for the effects of $\\e(R)$ and $\\var(R)$ and the interaction effects between the two on both the location (i.e., mean) of $H$ and its scale parameter. Note the nonlinear decrease in $H$ as $\\e(R)$ increases and the increase in $H$ as $\\var(R)$ increases. Additionally, note how the variance in spatial needs strongly increases with mean spatial needs.", out.width='100%'}
 knitr::include_graphics('../figures/simulation-regression-plots.png')
 ```
 
@@ -352,7 +352,7 @@ Predicting animal movement using stochastic models may seem less straightforward
 
 ### Quantifying spatial needs
 
-\noindent The concept of a home range has a long history in ecological research as an indicator of the space an animal requires to satisfy its essential requirements during a period of time [@burt_territoriality_1943], but home range analysis is not appropriate for animals which are not range-resident, such as migrating animals [e.g., @jonzen_rapid_2006; @geremia_migrating_2019; @abrahms_memory_2019] and nomadic animals [e.g., @morato_space_2016; @nandintsetseg_variability_2019]. Although here we quantify animal's spatial needs using 50% and 95% home-range estimates, we expect that similar conclusions can be drawn about the positional variance, $\vpos$, of animals that are not range-resident.In the case of animals that are range resident for short periods of time, we can model their movement and short-term spatial needs within distinct and discrete periods or using a sliding window approach (see the discussion section). Note, however, that although range-resident animals will generally have smaller positional variance ($\vpos$) than migratory and nomadic animals, $\vpos$ is not sufficient to distinguish between range residency, migration, and nomadism, since $\vpos$ determines the scale and size of an animal's movement but not its behavior. Instead, the animal's $\tau_p$, $\tau_v$, and $\bar v$ can help discriminate between different behaviors. Animals with a $\tau_p$ shorter than a year are likely range-resident, while animals with a $\tau_p$ on the order of a year are likely to be migratory (as long as their life expectancy is greater than a year). In contrast, when an animal's $\tau_p$ is on the order of its expected lifespan, it is most often nomadic, since it does not have an average position it returns to regularly.
+\noindent The concept of a home range has a long history in ecological research as an indicator of the space an animal requires to satisfy its essential requirements during a period of time [@burt_territoriality_1943], but home range analysis is not appropriate for animals which are not range-resident, such as migrating animals [e.g., @jonzen_rapid_2006; @geremia_migrating_2019; @abrahms_memory_2019] and nomadic animals [e.g., @morato_space_2016; @nandintsetseg_variability_2019]. Although here we quantify animal's spatial needs using 95% home-range estimates, we expect that similar conclusions can be drawn about the positional variance, $\vpos$, of animals that are not range-resident.In the case of animals that are range resident for short periods of time, we can model their movement and short-term spatial needs within distinct and discrete periods or using a sliding window approach (see the discussion section). Note, however, that although range-resident animals will generally have smaller positional variance ($\vpos$) than migratory and nomadic animals, $\vpos$ is not sufficient to distinguish between range residency, migration, and nomadism, since $\vpos$ determines the scale and size of an animal's movement but not its behavior. Instead, the animal's $\tau_p$, $\tau_v$, and $\bar v$ can help discriminate between different behaviors. Animals with a $\tau_p$ shorter than a year are likely range-resident, while animals with a $\tau_p$ on the order of a year are likely to be migratory (as long as their life expectancy is greater than a year). In contrast, when an animal's $\tau_p$ is on the order of its expected lifespan, it is most often nomadic, since it does not have an average position it returns to regularly.
 -->
 
 <!-- ### Modeling spatial needs -->
