--- a/writing/appendix-1-simulations.Rmd
+++ b/writing/appendix-1-simulations.Rmd
@@ -112,7 +112,10 @@ library('terra')   # for working with raster data
 library('dplyr')   # for data wrangling
 library('purrr')   # for functional programming
 library('tidyr')   # for data wrangling (e.g., nested tibbles)
+library('mgcv')    # for empirical Bayes GAMs
 library('ggplot2') # for fancy plots
+library('cowplot') # for fancy multi-panel plots
+theme_set(theme_bw()) # change default theme
 
 # source custom functions
 source('functions/rgamma2.R') # rgamma() parameterized by mean and variance
@@ -120,6 +123,7 @@ source('analysis/mean-variance-trends-panel-data.R') # mu and sigma2
 source('analysis/simulations/movement-model.R') # for consistency
 source('functions/get_hr.R') # for extracting gaussian home range
 source('functions/label_visits.R') # decides when animal encounters food
+source('analysis/figures/default-figure-styling.R') # for color palette
 
 DELTA_T <- 60 # sampling interval in seconds
 SAMPLES <- seq(0, 60 * 60 * 12, by = DELTA_T) # 12 hours by DELTA_T seconds
@@ -232,46 +236,6 @@ days <-
   filter(cumsum(full) <= 1) %>% # full only once
   ungroup()
 
-if(FALSE) {
-  # check if the ends of each day are correct and make sense
-  days_end <-
-    days %>%
-    group_by(scenario, day) %>%
-    filter(full, ! duplicated(full)) %>% # take 1st row where full
-    rename(t_expl = t) %>% # to avoid duplicated colnames with tracks
-    # remove unneded columns (also avoids duplicated colnames with tracks)
-    dplyr::select(-c(x, y, vx, vy, longitude, latitude, food))
-  
-  # check max fraction of time used (should be < 1)
-  max(days_end$t_expl) / MAX_T
-  
-  # are animals are full only once/day? (should be == 1)
-  sum(days_end$full) / (max(days$day) * 2)
-  
-  # plot of satiety over time by animal
-  ggplot(days, aes(t, satiety, group = day)) +
-    facet_wrap(~ scenario) +
-    geom_line(alpha = 0.05) +
-    geom_point(aes(t_expl), days_end, alpha = 0.1) +
-    geom_hline(yintercept = REQUIRED, color = 'red') +
-    geom_vline(xintercept = MAX_T, color = 'blue')
-  
-  # check distribution of animals
-  ggplot(days_end, aes(scenario, t_expl)) +
-    geom_hline(yintercept = MAX_T, color = 'red') +
-    geom_violin(fill = 'forestgreen', alpha = 0.3) +
-    geom_boxplot(fill = NA) +
-    labs(x = '', y = 'Exploration time')
-  
-  # check home ranges of animals
-  ggplot(days) +
-    facet_grid(. ~ scenario) +
-    coord_equal() +
-    geom_hex(aes(longitude, latitude)) +
-    scale_fill_distiller('Count', type = 'seq', na.value = 'transparent') +
-    theme(legend.position = 'top')
-}
-
 # single estimates that eventually converge to the asymptote ----
 days_summarized <-
   days %>%
@@ -294,31 +258,6 @@ days_summarized <-
          timestamp = as.POSIXct(t, origin = '2000-01-01')) %>% # new times 
   ungroup() # remove grouping by scenario
 
-if(FALSE) {
-  # check times are adding up correctly
-  # best case should require less time
-  # blue and red lines should have same length (within the pair)
-  # black lines should be horizontal
-  days_summarized %>%
-    filter(day <= 10) %>%
-    ggplot(aes(day, timestamp)) +
-    facet_wrap(~ scenario, scales = 'free_y') +
-    geom_line() +
-    geom_line(aes(group = day), color = 'blue', lwd = 30) +
-    geom_line(aes(day, timestamp + t_expl, group = day), color = 'red',
-              lwd = 30)
-  
-  days_summarized %>%
-    filter(day <= 10) %>%
-    ggplot() +
-    facet_wrap(~ scenario) +
-    coord_equal() +
-    geom_path(aes(x, y, group = day), alpha = 0.5) +
-    geom_point(aes(0, 0)) +
-    geom_point(aes(x, y), filter(days_summarized, day <= 10, t == 0),
-               color = 'red')
-}
-
 # estimate saturation curve of home range size over number of days
 saturation_days <-
   expand_grid(n_days = (2^seq(1, log2(1e3), by = 0.2)) %>%
@@ -334,7 +273,7 @@ saturation_days <-
          m = map(1:n(), \(i) {
            cat('Fitting model', i, '\n')
            ctmm.fit(tel[[i]], theta[[i]])
-           }), # fit movement model
+         }), # fit movement model
          sigma = map_dbl(m, \(.m) ctmm:::area.covm(.m$sigma)), # var(pos)
          hr = get_hr(.sigma = sigma, quantile = 0.95)) # Gaussian HR
 
@@ -371,6 +310,156 @@ knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/hr-over-days.png',
 3. $\tt{analysis/simulations/hr-mean-variance-simulations-modeling.R}$
 4. $\tt{analysis/simulations/hr-mean-variance-simulations-hrs.R}$
 6. $\tt{analysis/simulations/modeling-R-and-hr.R}$
+
+# Modeling the results from the simulations
+
+This final section illustrates the location-scale GAM used to estimate the effects of resource abundance and stochasticity on the simulated spatial needs. Although the model was fit to both the 95% and core (50%) home range estimates, the results were presented only for the 95% quantile for simplicity. The home range was caulculated using a Gaussian approximation using the simulated organism's positional variance:
+
+$$\widehat{h_q} = -2 \log(1 - q) \pi \sigma^2_{pos},$$
+
+where $widehat{h_q}$ is the estimated home range for the $q^{\text{th}}$ quantile and $\sigma^2_{pos}$ is the positional variance. Consequently, the estimated core home range estimate is simply a multiple of the 95% quantile:
+
+$$\widehat{h_{0.95}} / \widehat{h_{0.5}} = \frac{-2 \log(1 - 0.95) \pi \sigma^2_{pos}}{-2 \log(1 - 0.5) \pi \sigma^2_{pos}} = \frac{\log(1 - 0.95)}{\log(1 - 0.5)} = \frac{\log(0.05)}{\log(0.5)} = \log_{0.5}(0.05) \approx 4.322,$$
+
+and therefore $\e(R)$ and $\var(R)$ would have similar effects (but about 4.322 times weaker) on the core home range than they do on the 95% home range. Note that we used this approximation because, unlike real organisms, the simulated organism did not use the available space selectively (e.g., spending more time near cell boundaries), so the Gaussian approximation is appropriate. When estimating spatial needs based on empirical data, we suggest estimating utilization distributions using methods such as Autocorrelated Kernel Density Estimation [see Appendix 2 on empirical modeling and @noonan_comprehensive_2019; @alston_mitigating_2022; @silva_autocorrelationinformed_2022].
+
+```{r, eval=TRUE}
+# switch data to long format with a column of quantile
+sims <- readRDS('simulations/days-hrs.rds') %>%
+  tibble() %>%
+  pivot_longer(c(hr_50, hr_95), names_to = 'quantile', values_to = 'hr')%>%
+  mutate(quantile = factor(quantile)) # necessary for GAMs
+```
+
+The sampling of the data is not uniform:
+
+```{r, eval=TRUE}
+ggplot(sims, aes(mu, sigma2)) +
+  geom_point(alpha = 0.3)
+```
+
+But it is not particularly problematic:
+
+```{r, eval=TRUE}
+ggplot(sims, aes(mu, sigma2)) +
+  geom_hex(bins = 20) +
+  scale_fill_viridis_c('Count', limits = c(0, NA), option = 'A',
+                       direction = -1) +
+  theme_bw() # Rmd only keeps theme_bw as default for a single plot
+```
+
+The abundance of data for the average $\e(R)$ and $\var(R)$ did not create biases in the models, since removing such values had no appreciable effect on the model estimates (not shown). To estimate the effects of resource abundance and stochasticity on the simulated spatial needs, we fit 3 location-scale GAMs (GAMLSs) with a location-scale gamma distribution (since home ranges are strictly positive) of increasing complexity. We hypothesized that the effect of $\e(R)$ would depend on $\var(R)$ (and the effect of $\var(R)$ would depend on $\e(R)$), since we expected organisms to respond to changes in $\mu(t)$ less in predictable environments than in stochastic ones. The three models are detailed below and compared using the Akaike Information Criterion and the Bayesian Information Criterion. Both information criteria demonstrate that the third model, which accounts for the interaction effects of $\e(R)$ and $\var(R)$, is the best model.
+
+```{r, eval=TRUE}
+# marginal effects of mu and sigma only (linear on the log link scale)
+m_1 <- gam(
+  list(
+    # predictor for the mean
+    hr ~ quantile + mu + sigma2,
+    # predictor for the scale (variance = scale * mean)
+    ~ quantile + mu + sigma2),
+  family = gammals(),
+  data = sims)
+
+# marginal effects of mu and sigma only (nonlinear on the log link scale)
+m_2 <- gam(
+  list(
+    hr ~ quantile + s(mu) + s(sigma2),
+    ~ quantile + s(mu) + s(sigma2)),
+  family = gammals(),
+  data = sims)
+
+# marginal and interaction effects (nonlinear on the log link scale)
+m_3 <- gam(
+  list(
+    hr ~ quantile + s(mu) + s(sigma2) + ti(mu, sigma2, k = 5),
+    ~ quantile + s(mu) + s(sigma2) + ti(mu, sigma2, k = 5)),
+  family = gammals(),
+  data = sims)
+
+AIC(m_1, m_2, m_3) # smooth model with interactions is best
+BIC(m_1, m_2, m_3) # smooth model with interactions is best
+
+m <- m_3 # select the best model
+summary(m)
+```
+
+Figure \@ref(fig:gamls-terms) shows each of the terms from model 3. The estimated effect of `quantile` (see the output of `summary()` above) supports the relationship between the gaussian HR estimates detailed above, since $\exp(1.464) = 4.323218 \approx \log_{0.5}(0.05),$ but there is no differences in the scale parameter between the two quantiles. Additionally, the interaction term of $\mu(t)$ and $\sigma^2(t)$ on the mean HR indicates that the effect of $\sigma^2(t)$ is stronger at lower values of $\mu(t)$ (e.g., $\mu(t) = 100$), since the estimated effect is negative for low values of $\sigma^2(t)$ and positive for high values of $\sigma^2(t)$, which accentuates the effect of $\sigma^2(t)$ on the mean home range. The opposite is true for high values of $\mu(t)$, where the effect of $\sigma^2(t)$ becomes flatter, and thus weaker. Similar but opposite conclusions can be drawn from the interaction term for the scale parameter, since the effect of $\sigma^2(t)$ on the scale parameter is weaker when $\mu(t)$ is low and stronger when $\mu(t)$ is high.
+
+```{r gamls-terms, fig.cap = "Marginal and interaction effects of each of the terms present in the final GAMLS (on the log link scales). The dashed lines indicate the 95\\% Bayesian credible intervals. The data points are included as rug plots in all marginal terms and as points in the interaction terms.", eval=TRUE, fig.height=16, fig.width=8, out.width='65%', echo=FALSE}
+# using custom layout to make figure easier to read
+layout(matrix(c(7, 1, 2, 3, 8, 4, 5, 6), nrow = 4, byrow = TRUE))
+plot(m, all.terms = TRUE, scheme = 3, scale = 0)
+```
+
+Finally, we can use the model to recreate figure \@ref(fig:5-5-reg) and visualize the marginal effects of $\mu(t)$ and $\sigma^2(t)$ on the 95% home range.
+
+```{r, eval=TRUE}
+# effect of mu
+newd_mu <-
+  expand_grid(mu = seq(min(sims$mu), max(sims$mu), length.out = 400),
+              sigma2 = mean(sims$sigma2),
+              quantile = unique(sims$quantile))
+
+preds_mu <- bind_cols( # bind new data and predictions
+  newd_mu,
+  predict(m, newdata = newd_mu, type = 'link', se.fit = TRUE) %>%
+    data.frame() %>% # convert list to data frame
+    # 95% CIs assuming Gaussian credible intervals on the link scale
+    transmute(hr = exp(fit.1),
+              hr_lwr = exp(fit.1 - se.fit.1 * 1.96),
+              hr_upr = exp(fit.1 + se.fit.1 * 1.96)))
+
+
+# effect of sigma2
+newd_sigma2 <-
+  expand_grid(mu = mean(sims$mu),
+              sigma2 = seq(min(sims$sigma2), max(sims$sigma2),
+                           length.out = 400),
+              quantile = unique(sims$quantile))
+
+preds_sigma2 <- bind_cols(
+  newd_sigma2,
+  predict(m, newdata = newd_sigma2, type = 'link', se.fit = TRUE) %>%
+    data.frame() %>%
+    transmute(hr = exp(fit.1),
+              hr_lwr = exp(fit.1 - se.fit.1 * 1.96),
+              hr_upr = exp(fit.1 + se.fit.1 * 1.96)))
+
+# final figure
+e_r <- 'Resource abundance'
+v_r <- 'Resource stochasticity'
+
+preds <- bind_rows(mutate(preds_mu, x = e_r) %>%
+                     rename(value = mu) %>%
+                     select(-sigma2),
+                   mutate(preds_sigma2, x = v_r) %>%
+                     rename(value = sigma2) %>%
+                     select(-mu))
+
+sims_l <- sims %>%
+  mutate(e = hr - predict(m, newdata = sims, type = 'response')[, 1]) %>%
+  pivot_longer(c(mu, sigma2)) %>%
+  mutate(x = if_else(name == 'mu', e_r, v_r))
+
+ggplot() +
+  facet_grid(. ~ x, scales = 'free', switch = 'x') + # label below x axis
+  geom_point(aes(value, hr), filter(sims_l, quantile == 'hr_95'),
+             alpha = 0.1, color = pal[3]) +
+  # 95% CIs are present but hidden under the estimates
+  geom_ribbon(aes(value, ymin = hr_lwr, ymax = hr_upr, fill = x),
+              filter(preds, quantile == 'hr_95'), alpha = 0.5) +
+  geom_line(aes(value, hr, color = x),
+            filter(preds, quantile == 'hr_95')) +
+  scale_color_manual(values = pal) +
+  scale_x_continuous(NULL, breaks = NULL) + 
+  scale_y_continuous('Home range size', breaks = NULL) +
+  theme_bw() +
+  # to make facet strip look like the x axis
+  theme(legend.position = 'none',
+        strip.background = element_blank(),
+        strip.text = element_text(size = 12))
+```
 
 \clearpage
 
